force-app/main/default/objects/litify_pm__Expense__c/fields/Expense_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type_Name__c</fullName>
    <formula>litify_pm__ExpenseType2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Type Name</label>
    <type>Text</type>
</CustomField>