force-app/main/default/objects/litify_pm__Expense__c/fields/Total_Payments_Reductions__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Reductions__c</fullName>
    <label>Total Payments / Reductions</label>
    <summarizedField>Expense_Payment_Reduction__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_Payment_Reduction__c.Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>